docs(profiling): pair --enable-native-access with the profiling switch
Turning on riptide.profiling.enabled makes JDK 25 warn that the agent's
System::load is a restricted method, and that a future release will block
it unless native access is enabled. The remedy was documented but lived
nowhere near the switch, so the decision to profile and the flag that
keeps profiling working were made in two different files.

Ship the flag commented out in riptide.env beside the toggle, and say the
same thing in application.properties, which cannot set a JVM flag itself.

Deliberately not added to the default ExecStart, ENTRYPOINT or Nix
wrapper. Profiling is opt-in and the warning is profiling-only, so
putting it in the default launch would grant native access to every
deployment including the majority that never profile.

Also correct a wrong claim this change would otherwise have extended:
JAVA_OPTS does nothing on Nix. package.nix builds the launcher with
makeWrapper --add-flags, which emits `exec "<java>" -jar <path> "$@"` and
references no environment variable, and module.nix points ExecStart
straight at that wrapper, so there is no shell either. Verified by
building a wrapper with the same call shape and reading it: zero
occurrences of JAVA_OPTS. The docs said "deb/rpm and Nix, via the
environment file" and module.nix described the file as carrying
JAVA_OPTS. Both now name JDK_JAVA_OPTIONS, which the java launcher reads
itself and which therefore works on all four run modes.

Other corrections found in review, each verified:

- riptide.env is packaged config|noreplace, so an upgrade keeps an edited
  copy. Only new installs get the block; upgraders diff .dpkg-dist or
  .rpmnew. The docs said "ships" without that limit.
- PYROSCOPE_SERVER_ADDRESS defaults to http://localhost:4040 in the agent
  (DEFAULT_SERVER_ADDRESS in Config), so omitting it starts profiling,
  logs success, and uploads nowhere with no error. Now stated.
- Dropping --sun-misc-unsafe-memory-access is no